tests/testing_data/anonymized_testing_data/invalid_data/no_valid_fields.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:8529e5b0a4842b78f4cdb87d47e0b911caf478a749eaa00020c17397df133013
size 13532
